--- a/pom.xml
+++ b/pom.xml
@@ -52,8 +52,12 @@
             <artifactId>swagger-models-jakarta</artifactId>
             <version>2.2.15</version>
         </dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
 
-    </dependencies>
+	</dependencies>
 
 	<build>
 		<plugins>
